# fastapi-watch

./: .gitignore  DOCS.md  README.md  RELEASE.md  pyproject.toml
.github/: FUNDING.yml
.github/workflows/: publish.yml
src/fastapi_watch/: __init__.py  _dashboard.py  alerts.py  dashboard.py  middleware.py  models.py  probe_group.py  probe_router.py  prometheus.py  registry.py  storage.py
src/fastapi_watch/probes/: __init__.py  base.py  celery.py  disk.py  event_loop.py  http.py  kafka.py  memcached.py  memory.py  mongo.py  mysql.py  noop.py  postgresql.py  rabbitmq.py  redis.py  route.py  smtp.py  sqlalchemy.py  tcp.py  threshold.py  websocket.py
tests/: conftest.py  test_bounded_alert_queue.py  test_celery_probe.py  test_circuit_breaker_metrics.py  test_dashboard.py  test_degraded_status.py  test_discover_routes.py  test_disk_probe.py  test_event_loop_probe.py  test_fastapi_route_probe.py  test_fastapi_websocket_probe.py  test_http_probe.py  test_kafka_probe.py  test_maintenance_mode.py  test_memcached_probe.py  test_memory_probe.py  test_mongo_probe.py  test_mysql_probe.py  test_noop_probe.py  test_postgresql_probe.py  test_probe_router.py  test_probe_tags_description.py  test_prometheus.py  test_redis_probe.py  test_registry.py  test_request_metrics.py  test_route_probe.py  test_security.py  test_smtp_probe.py  test_sqlalchemy_probe.py  test_tcp_probe.py  test_threshold_probe.py  test_websocket_probe.py
