[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fastapi-watch"
version = "1.5.5"
description = "Structured health and readiness check system for FastAPI"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
keywords = ["fastapi", "health", "readiness", "probes", "kubernetes", "liveness"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Framework :: FastAPI",
]
dependencies = [
    "fastapi>=0.100.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
# databases
sqlalchemy = ["sqlalchemy>=2.0"]
postgres  = ["asyncpg>=0.30"]
mysql     = ["aiomysql>=0.2"]
# caching
redis     = ["redis>=4.2"]
memcached = ["aiomcache>=0.6"]
# messaging / queues
rabbitmq  = ["aio-pika>=9.4", "aiohttp>=3.9"]
kafka     = ["aiokafka>=0.9"]
# document stores
mongo     = ["motor>=3.0"]
# http
http      = ["aiohttp>=3.9"]
# task queues
celery    = ["celery>=5.0"]
# everything
all = [
    "sqlalchemy>=2.0",
    "asyncpg>=0.30",
    "aiomysql>=0.2",
    "redis>=4.2",
    "aiomcache>=0.6",
    "aio-pika>=9.4",
    "aiokafka>=0.9",
    "motor>=3.0",
    "aiohttp>=3.9",
    "celery>=5.0",
]

[project.urls]
Repository = "https://github.com/rgreen1207/fastapi-watch"

[tool.hatch.build.targets.wheel]
packages = ["src/fastapi_watch"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
